<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.testapp.ui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
    android:id="@+id/nav_kana"
    android:name="com.example.testapp.ui.kana.KanaFragment"
    android:label="@string/menu_kana"
    tools:layout="@layout/fragment_kana" />

</navigation>