<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_test"
    tools:context=".flash.hira_flash">

    <ImageButton
        android:id="@+id/saved_item"
        android:layout_width="67dp"
        android:layout_height="63dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:foreground="@drawable/ic_baseline_turned_in_not_24"
        android:contentDescription="@string/bookmark"
        app:layout_constraintBottom_toTopOf="@+id/charText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toEndOf="@+id/phoneticText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        android:textColorHighlight="#5C5C5C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_bold"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <Button
        android:id="@+id/prevButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_bold"
        android:text="@string/prevButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/charText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_bold"
        android:textAlignment="center"
        android:textColor="#3C403D"
        android:textSize="180sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <ImageButton
        android:id="@+id/soundButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:foregroundGravity="fill"
        android:scaleType="fitCenter"
        android:contentDescription="@string/play_sound"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charText"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/sound" />

    <TextView
        android:id="@+id/kanaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/maven_pro_bold"
        android:textAlignment="center"
        android:textColor="#3C403D"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneticText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/maven_pro_bold"
        android:textColor="#3C403D"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/charText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerKata"
        android:layout_width="0dp"
        android:layout_height="91dp"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>